--- a/README
+++ b/README
@@ -1,74 +1,46 @@
-Zoph 0.7 Readme
-02 June 2007
+Zoph 0.8 Readme
+9 September 2009
 
 1. Introduction
 
-   Zoph (Zoph Organizes PHotos) is a web based photo management system
-   written using PHP and backed by MySQL.  Photos are loaded to the db
-   using a perl script or a web interface.
+   Zoph (Zoph Organizes Photos) is a web based digital image presentation
+   and management system. In other words, a photo album. It is built with
+   PHP, MySQL and Perl.
 
-   After I bought a digital camera I wanted some way to easily organize
-   a growing number of photos.  I've worked on Zoph off and on over the
-   last couple of years and have used it to store and cross reference
-   a few thousand of my photos.
+   Many people store their photos in the digital equivalent of a shoe box:
+   lots of directories with names like 'Holiday 2008', 'January 2005' or
+   even 'Photos034'. Like shoe boxes, this is a great way to put your
+   photos away, but not such a great way to find them back or even look at
+   them. Zoph can help you to store your photos and keep them organized.
 
-2. Features (or YAWPA? - Yet Another Web Photo Album?)
+   While most photo album projects are primarily targeted at showing your
+   photos to others, Zoph is primarily targeted at keeping your photos
+   organized for yourself, giving you granular control over what you'd 
+   like to show to others, on a per-album or even a per-photo basis.
 
-   Yes, there are tons of photo album projects it seems.  What makes Zoph
-   different?  Well, here are some of it's features:
+   If you just want to generate a gallery of thumbnails from a bunch of
+   images, you may want to try one of the other numerous photo album
+   projects. But if you want to also store additional information about
+   your photos, search them, or control access to them, take a look at Zoph.
 
-   - Photos can have lots of meta data.  Each photo record can store:
-     - EXIF info (date, time, width, height, size,
-       camera make, camera model, flash used, focal length,
-       exposure, aperture, etc)
-     - title
-     - photographer
-     - location
-     - description
-     - rating
-     - people in the photo
-   - Each photo can appear in zero or more albums.
-   - Each photo can appear in zero or more categories.
-   - Albums, categories and locations are hierarchical.
-   - Searches can be performed using all this data:
-     "Show me all photos taken by 'Joe Smith' between 2001-01-01 and
-      2001-12-31 at 'Joe and Nancy's House' in which 'Nancy Smith'
-      appears and whose rating is greater than 5".
-   - Access privileges:
-     - each user has an account and is granted permissions on albums
-     - each user can specify preferences, including a color scheme
-     - an automatically logged in guest user can be defined.
-   - Watermarks:
-      A (visual) watermark can be added to the high quality photos to
-      prevent unauthorized use.
-   - Slideshows.
-   - Lightboxes.
-   - "Email this photo" feature.
-   - Basic reporting: most photographed people, places, etc.
-   - Photos, albums, categories, people, places and users can be
-     easily administered using the web interface.
-   - Import photos from the web or by using a Perl script.
-   - Export photos to generate static galleries with album or BINS.
-   - Internationalized.
-
-3. Installation
+2. Installation
 
    Read the REQUIREMENTS, INSTALL docs.  If you are upgrading
    skip to the UPGRADE document.
 
    More documentation can be found on http://en.wikibooks.org/wiki/zoph
 
-4. Copying
+3. Copying
 
    Zoph is free software.  It is released under the GPL license. Please 
    read the file COPYING for more details
 
-5. Feedback
+4. Feedback
    
    Please send feedback to zoph@zoph.org.  Releases can be found at
    http://www.zoph.org
 
-6. Thanks
+5. Thanks
 
    Zoph makes use of the following packages, for which I thank their authors
    for making available:
@@ -80,7 +52,10 @@ Zoph 0.7 Readme
    http://www.cascade.org.uk/software/php/calendar/index.php
 
    Rycks Translation Project by Eric Seigne
-   http://cvs.rycks.com/cgi-bin/cvsweb/rtpclass/?cvsroot=RTP
+   (website no longer available)   
 
+   Mapstraction Mapping abstraction project
+   http://www.mapstraction.org
+   
    For a list of individuals who have contributed fixes, improvements or
    translations, click on the 'about' tab within Zoph.
