Added "delete all | toggle selected | select all" links to imported photos window

--- a/lang/zoph_strings.txt
+++ b/lang/zoph_strings.txt
@@ -482,4 +482,6 @@ Uploading photos has been disabled in config.inc.php. Set UPLOAD to 1 to enable 
 This may also be caused by the max_post_size (%s) in php.ini.=
 Failed to write to disk=
 A PHP extension stopped the upload. Don't ask me why.=
-
+delete selected=
+select all=
+toggle selection=
