Geotagging support + some changes in templating system

--- a/lang/zoph_strings.txt
+++ b/lang/zoph_strings.txt
@@ -485,3 +485,35 @@ A PHP extension stopped the upload. Don't ask me why.=
 delete selected=
 select all=
 toggle selection=
+Tracks=
+Track=
+tracks=
+delete track=
+Confirm deletion of this track=
+time of first point=
+time of last point=
+number of points=
+can browse tracks=
+geotag=
+Geotagging will make Zoph use GPS tracks to determine the location where a photo was taken. You should import a GPX file using the import function before using the Geotagging option. Zoph will try to geotag %s photos.=
+Maximum time difference between photo and GPS timestamp=
+Maximum time=
+Only photos with a valid timezone=
+Overwrite existing geo-information=
+All tracks=
+Specific track=
+Options=
+Interpolation=
+Interpolate between points=
+Use nearest point=
+Do not interpolate if distance between points is more than this=
+Maximum distance=
+Maximum time=
+Do not interpolate if time between points is more than this=
+Test=
+To ensure that the geotagging operation goes well, you can check the results of the geotagging before storing them in the database.=
+Photos to test=
+Number of each=
+The location of %s photos has been determined. You can check the results below. Click 'geotag' to geotag all %s photos.=
+The location of none of the photos in the test set could be determined. This does not necessarily mean that none of the photos can be geotagged, since only a subset was tried. You can try to geotag %s photos by clicking 'geotag'.=
+No tracks found, you should import a GPX file.=
