--- a/lang/zoph_strings.txt
+++ b/lang/zoph_strings.txt
@@ -16,6 +16,7 @@
 5 - so so=
 6 - country=
 9 - city=
+A PHP extension stopped the upload. Don't ask me why.=
 A Photo from %s=
 A photo will be watermarked if the photo level is higher than the watermark level.=
 A possible cause is the upload_max_filesize variable in php.ini=
@@ -30,6 +31,7 @@ Album view=
 Albums=
 All photos have been downloaded in %s zipfiles.=
 All photos=
+All tracks=
 An error occurred.=
 An unknown file upload error occurred.=
 Annotate Photo=
@@ -54,6 +56,7 @@ Confirm deletion of saved search '%s'=
 Confirm deletion of this page=
 Confirm deletion of this pageset=
 Confirm deletion of this relationship=
+Confirm deletion of this track=
 Copy Color Scheme=
 Could not copy %s to %s.=
 Could not create directory=
@@ -70,14 +73,18 @@ Delete saved search=
 Deleting %s=
 Description for first photo=
 Description for second photo=
+Do not interpolate if distance between points is more than this=
+Do not interpolate if time between points is more than this=
 Download zipfile=
 Downloaded %s of %s photos.=
 E-Mail Photo=
 Edit Photos (Page %s/%s)=
+Failed to write to disk=
 Fields specified below will apply to all images imported.=
 File upload failed=
 For accessing these Albums you have to use this URL:=
 Full EXIF details=
+Geotagging will make Zoph use GPS tracks to determine the location where a photo was taken. You should import a GPX file using the import function before using the Geotagging option. Zoph will try to geotag %s photos.=
 Grant access to all existing albums:=
 Granting access to an album will also grant access to that album's ancestors if required. Granting access to all albums will not overwrite previously granted permissions.=
 Groups=
@@ -91,14 +98,23 @@ Import=
 Importing Files on the Server=
 Importing a Local File=
 Importing images...=
+In this album:=
+In this category:=
+In this place:=
 Insert failed.=
 Insufficient permissions to edit photo=
+Interpolate between points=
+Interpolation=
 Invalid path=
 Lightbox (Page %s/%s)=
 List=
 Lowest ranked=
+Maximum distance=
 Maximum number of files per zipfile=
 Maximum size per zipfile=
+Maximum time difference between photo and GPS timestamp=
+Maximum time=
+Maximum time=
 Missing a temporary folder.=
 Most Photographed People=
 Most Photographed Places=
@@ -125,17 +141,23 @@ No people were found with a last name beginning with '%s'.=
 No photo was found.=
 No photos were found for this slideshow.=
 No photos were found matching your search criteria.=
+No tracks found, you should import a GPX file.=
 No write permissions to this album.=
 No=
 Not rated=
+Nothing found=
 Notify User=
 Notify=
+Number of each=
 Oldest photo=
 On all pages=
 On first page=
 On last page=
+Only photos with a valid timezone=
+Options=
 Or you may use the %s search page %s to find photos using multiple criteria. You may also view a %s randomly chosen photo %s like the one above.=
 Originally written by Jason Geiger, now maintained by Jeroen Roos with thanks to the following for their contributions:=
+Overwrite existing geo-information=
 Owner=
 Page=
 Pages in this pageset=
@@ -143,6 +165,8 @@ Pages=
 Pagesets=
 People=
 Photos (Page %s/%s)=
+Photos taken by this person:=
+Photos to test=
 Places=
 Preferences=
 Prev=
@@ -162,7 +186,11 @@ Skipping %s: File does not exist.=
 Skipping %s: Unsupported file type.=
 Sort Name=
 Sort order for subalbums and categories=
+Specific track=
+Test=
 The image you requested could not be displayed.=
+The location of %s photos has been determined. You can check the results below. Click 'geotag' to geotag all %s photos.=
+The location of none of the photos in the test set could be determined. This does not necessarily mean that none of the photos can be geotagged, since only a subset was tried. You can try to geotag %s photos by clicking 'geotag'.=
 The password for %s has been changed=
 The password may not be null=
 The passwords did not match=
@@ -176,16 +204,23 @@ There are %s photos=
 There are no photos=
 There is %s photo=
 These options are always available in the tabs on the upper right. Use the %s home %s link to return here. Click on any thumbnail to see a larger version along with information about that photo.=
+This feature is not available because the photo was not found.=
+This may also be caused by the max_post_size (%s) in php.ini.=
 This page is used in the following pagesets:=
 This photo is not in any albums.=
 This photo is not in any categories.=
 Thumbnails=
 To edit your preferences or change your password, click %s here %s.=
+To ensure that the geotagging operation goes well, you can check the results of the geotagging before storing them in the database.=
 To import images already on the server, specify the absolute path of a file name or directory. If a directory is specified, all images within the directory will be imported. If a destination path is given (relative to the top level image dir), the imported images will be copied there. Otherwise, they will not be moved.=
 To upload and import a local file, browse to the file and specify the destination path (relative to the top level image dir) in which it should be placed.=
+Track=
+Tracks=
 Tree=
 Up=
+Uploading photos has been disabled in config.inc.php. Set UPLOAD to 1 to enable uploading images via the browser.=
 Use alphanumeric, - and _. Do not provide an extension.=
+Use nearest point=
 User=
 Users=
 Welcome %s. %s currently contains=
@@ -228,11 +263,13 @@ camera make=
 camera model=
 can browse people=
 can browse places=
+can browse tracks=
 can download zipfiles=
 can import=
 can leave comments=
 can rate photos=
 can rate the same photo multiple times=
+can share photos=
 can view details of people=
 can view details of places=
 cancel=
@@ -243,6 +280,7 @@ category sort order=
 category=
 ccd width=
 change password=
+children=
 city=
 class=
 collapse all=
@@ -279,6 +317,8 @@ delete pageset=
 delete person=
 delete place=
 delete relationship=
+delete selected=
+delete track=
 delete user=
 delete=
 description=
@@ -309,6 +349,7 @@ focus distance=
 from (your email)=
 from (your name)=
 gender=
+geotag=
 go=
 group name=
 group=
@@ -335,6 +376,7 @@ is not in photo=
 is not set.=
 iso equiv=
 language=
+last changed from %s to %s=
 last ip address=
 last login=
 last modified=
@@ -365,7 +407,13 @@ move up=
 name=
 new=
 no children=
+no children=
 no last name=
+no photos=
+no rating=
+no sub-albums=
+no sub-categories=
+no sub-places=
 no=
 not like=
 not rated=
@@ -378,6 +426,7 @@ number of people=
 number of photos in an album=
 number of photos=
 number of places=
+number of points=
 number of results to display on reports page=
 only visible for admin users=
 open fullsize photo in new window=
@@ -414,6 +463,7 @@ position=
 prefs=
 random photo=
 rate=
+rated between %s and %s and an average of %s=
 rating=
 recreate thumbnails=
 relate=
@@ -427,10 +477,12 @@ rows=
 save search=
 search=
 seconds=
+select all=
 select=
 send as html=
 send fullsize=
 set %s for children=
+share this photo=
 show additional attributes=
 show breadcrumbs=
 show descriptions under thumbnails=
@@ -445,11 +497,17 @@ sort name=
 spouse=
 state=
 stop=
+sub-albums=
+sub-categories=
+sub-places=
 subject=
 submit=
+taken between %s and %s=
 text=
 that have been categorized=
 time correction=
+time of first point=
+time of last point=
 time to display each photo in a slideshow=
 time=
 timestamp=
@@ -457,7 +515,9 @@ timezone=
 title=
 to (email)=
 to (name)=
+toggle selection=
 top=
+tracks=
 unset coverphoto=
 update relationship=
 update=
@@ -478,43 +538,3 @@ yes=
 zip or zip+4=
 zip=
 zoom level=
-Uploading photos has been disabled in config.inc.php. Set UPLOAD to 1 to enable uploading images via the browser.=
-This may also be caused by the max_post_size (%s) in php.ini.=
-Failed to write to disk=
-A PHP extension stopped the upload. Don't ask me why.=
-delete selected=
-select all=
-toggle selection=
-Tracks=
-Track=
-tracks=
-delete track=
-Confirm deletion of this track=
-time of first point=
-time of last point=
-number of points=
-can browse tracks=
-geotag=
-Geotagging will make Zoph use GPS tracks to determine the location where a photo was taken. You should import a GPX file using the import function before using the Geotagging option. Zoph will try to geotag %s photos.=
-Maximum time difference between photo and GPS timestamp=
-Maximum time=
-Only photos with a valid timezone=
-Overwrite existing geo-information=
-All tracks=
-Specific track=
-Options=
-Interpolation=
-Interpolate between points=
-Use nearest point=
-Do not interpolate if distance between points is more than this=
-Maximum distance=
-Maximum time=
-Do not interpolate if time between points is more than this=
-Test=
-To ensure that the geotagging operation goes well, you can check the results of the geotagging before storing them in the database.=
-Photos to test=
-Number of each=
-The location of %s photos has been determined. You can check the results below. Click 'geotag' to geotag all %s photos.=
-The location of none of the photos in the test set could be determined. This does not necessarily mean that none of the photos can be geotagged, since only a subset was tried. You can try to geotag %s photos by clicking 'geotag'.=
-No tracks found, you should import a GPX file.=
-Nothing found=
