Added some previously forgotten translations

--- a/lang/zoph_strings.txt
+++ b/lang/zoph_strings.txt
@@ -5,6 +5,7 @@
 %s images loaded.=
 %s photo(s) selected=
 %s photos in %s=
+%s photos were geotagged=
 (left to right, front to back).=
 0 - world=
 1 - close your eyes=
@@ -84,6 +85,7 @@ Fields specified below will apply to all images imported.=
 File upload failed=
 For accessing these Albums you have to use this URL:=
 Full EXIF details=
+Geotag=
 Geotagging will make Zoph use GPS tracks to determine the location where a photo was taken. You should import a GPX file using the import function before using the Geotagging option. Zoph will try to geotag %s photos.=
 Grant access to all existing albums:=
 Granting access to an album will also grant access to that album's ancestors if required. Granting access to all albums will not overwrite previously granted permissions.=
@@ -158,6 +160,7 @@ Options=
 Or you may use the %s search page %s to find photos using multiple criteria. You may also view a %s randomly chosen photo %s like the one above.=
 Originally written by Jason Geiger, now maintained by Jeroen Roos with thanks to the following for their contributions:=
 Overwrite existing geo-information=
+Overwrite=
 Owner=
 Page=
 Pages in this pageset=
@@ -223,6 +226,7 @@ Use alphanumeric, - and _. Do not provide an extension.=
 Use nearest point=
 User=
 Users=
+Valid timezone=
 Welcome %s. %s currently contains=
 Yes=
 You can upload a single image or a zip or tar file of images.=
@@ -283,6 +287,7 @@ change password=
 children=
 city=
 class=
+clear=
 collapse all=
 color scheme=
 color schemes=
@@ -291,6 +296,7 @@ comment=
 comments by this user=
 comments=
 compression=
+confirm deletion of this track=
 confirm password=
 continue=
 copy=
@@ -343,6 +349,7 @@ file name=
 file/directory=
 file=
 first name=
+first=
 flash used=
 focal length=
 focus distance=
@@ -381,6 +388,7 @@ last ip address=
 last login=
 last modified=
 last name=
+last=
 latitude=
 less than=
 level=
@@ -462,6 +470,7 @@ position of original=
 position=
 prefs=
 random photo=
+random=
 rate=
 rated between %s and %s and an average of %s=
 rating=
