Fixed a layout glitch on the add/edit group page. Also added a missing translation from that page.

--- a/lang/zoph_strings.txt
+++ b/lang/zoph_strings.txt
@@ -242,6 +242,7 @@ Zoph version %s, released %s.=
 about=
 access level=
 add comment=
+add/edit group=
 add/edit user=
 address continued=
 address=
