- Fixed a few translation glitches - Updated nl, de, en-ca - Added missing translation

--- a/lang/zoph_strings.txt
+++ b/lang/zoph_strings.txt
@@ -82,6 +82,7 @@ E-Mail Photo=
 Edit Photos (Page %s/%s)=
 Failed to write to disk=
 Fields specified below will apply to all images imported.=
+Filename=
 File upload failed=
 For accessing these Albums you have to use this URL:=
 Full EXIF details=
@@ -231,7 +232,7 @@ Welcome %s. %s currently contains=
 Yes=
 You can upload a single image or a zip or tar file of images.=
 You have enabled autocompletion for one or more dropdown boxes on this page, however, you do not seem to have Javascript support. You should either enable javascript or turn autocompletion off, or this page will not work as expected!=
-You have requested the download of %s photos, with a total size of %s=
+You have requested the download of %s photos, with a total size of %s.=
 You may search for photos %s taken %s or %s modified %s in the past %s days.=
 You need to have ZIP support in PHP to download zip files=
 Your Zoph Account=
