Added a few missing strings, reported by Pekka Kutinlahti.

--- a/lang/zoph_strings.txt
+++ b/lang/zoph_strings.txt
@@ -82,8 +82,8 @@ E-Mail Photo=
 Edit Photos (Page %s/%s)=
 Failed to write to disk=
 Fields specified below will apply to all images imported.=
-Filename=
 File upload failed=
+Filename=
 For accessing these Albums you have to use this URL:=
 Full EXIF details=
 Geotag=
@@ -222,6 +222,7 @@ Track=
 Tracks=
 Tree=
 Up=
+Upload photo=
 Uploading photos has been disabled in config.inc.php. Set UPLOAD to 1 to enable uploading images via the browser.=
 Use alphanumeric, - and _. Do not provide an extension.=
 Use nearest point=
@@ -247,6 +248,7 @@ add/edit group=
 add/edit user=
 address continued=
 address=
+admin=
 album description=
 album name=
 album sort order=
@@ -358,6 +360,7 @@ focal length=
 focus distance=
 from (your email)=
 from (your name)=
+from=
 gender=
 geotag=
 go=
@@ -400,6 +403,7 @@ lightbox=
 like=
 load=
 location=
+locations=
 logon=
 logout=
 longitude=
