--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,13 @@
 Zoph Changelog
+Zoph 0.9
+23 jun 2012
+
+Zoph 0.9 is a stable release. It's equal to v0.9pre2, except for an updated Italian translation.
+
+Translations
+    Updated Italian translation, by Francesco Ciattaglia
+
+There are no known bugs in this version.
 
 Zoph 0.9pre2
 20 Feb 2012
