Made template selectible from webinterface
Made several changes to the templating system
- Removed the ICONSET setting from config.inc.php
- Removed the int.css from the webinterface
- Replaced both by int.template setting
- Zoph now discovers which templates there are in the templates
directory
- Images and icons have been moved inside the template directory
- Zoph finds out if a template has an icon, image or css file and falls
back to the "default" template if it has not. (other template file not
yet)
- made some changes to the language class so the CLI could find them as
well

#28
#8

--- a/lang/zoph_strings.txt
+++ b/lang/zoph_strings.txt
@@ -211,6 +211,7 @@ These options are always available in the tabs on the upper right. Use the %s ho
 This feature is not available because the photo was not found.=
 This may also be caused by the max_post_size (%s) in php.ini.=
 This page is used in the following pagesets:=
+This page needs Javascript switched on and will not function without it.=
 This photo is not in any albums.=
 This photo is not in any categories.=
 Thumbnails=
