Added extra fields to web import
Closes #32

--- a/lang/zoph_strings.txt
+++ b/lang/zoph_strings.txt
@@ -344,6 +344,7 @@ The zipfile is being created...=
 There are %s photos=
 There are no photos=
 There is %s photo=
+These settings will override EXIF data!=
 These options are always available in the tabs on the upper right. Use the %s home %s link to return here. Click on any thumbnail to see a larger version along with information about that photo.=
 This determines how Zoph displays dates. You can use the following characters: dDjlNSwzWFmMntLoYy (for explanation, see http://php.net/manual/en/function.date.php) and /, space, -, (, ), :, "," and .=
 This determines how Zoph displays times. You can use the following characters: aABgGhHisueIOPTZcrU (for explanation, see http://php.net/manual/en/function.date.php) and /, space, -, (, ), :, "," and .=
@@ -518,6 +519,7 @@ email photo=
 error=
 expand all=
 exposure=
+extra fields=
 father=
 female=
 file=
