Implemented 'unhiding' of hidden circles and access checking
Added an actionlink to show hidden circles for admin users and users
that have the 'see hidden circles' permission.

Also added permission checking: users that do not have the 'see hidden
circles' permission can no longer browse to an hidden circle.

Issue #46

--- a/lang/zoph_strings.txt
+++ b/lang/zoph_strings.txt
@@ -543,6 +543,7 @@ group=
 groups=
 height=
 hidden=
+hide hidden=
 hide=
 home location=
 home=
@@ -677,6 +678,7 @@ share this photo=
 show additional attributes=
 show breadcrumbs=
 show descriptions under thumbnails=
+show hidden=
 show original page=
 size of pager on results page=
 size of photos=
