Added possibility to change whether a user can see hidden circles
Also changed the name of the db field for users from 'see_hidden_people'
to 'see_hidden_circles'

Issue #46

--- a/lang/zoph_strings.txt
+++ b/lang/zoph_strings.txt
@@ -452,6 +452,7 @@ can rate the same photo multiple times=
 can share photos=
 can view details of people=
 can view details of places=
+can view hidden circles=
 cancel=
 categories=
 category description=
